metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/LiveText__LiveText_Number__c.object-meta.xml
<CustomObject>
    <description>LiveMessage Number</description>
    <label>LiveMessage Number</label>
    <nameField>
        <label>Phone Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveMessage Numbers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>