metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Auto_Response_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Auto_Response_Message__c</fullName>
    <description>This message is sent automatically when a LiveMessage session is received during business hours.</description>
    <inlineHelpText>This message is sent automatically when an inbound customer text is received during business hours.</inlineHelpText>
    <label>Auto-Response Message</label>
    <type>TextArea</type>
</CustomField>