metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business support hours for this phone number. Business Hours can be managed via Setup.</inlineHelpText>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>LiveMessage Numbers</relationshipLabel>
    <relationshipName>LiveText_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>