metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Channel_Type__c</fullName>
    <defaultValue>"Text"</defaultValue>
    <description>LiveMessage Channel Type</description>
    <label>Channel Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>