metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__CreateEvent__c.field-meta.xml
<CustomField>
    <fullName>LiveText__CreateEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreateEvent</label>
    <type>Checkbox</type>
</CustomField>