metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__CreateTask__c.field-meta.xml
<CustomField>
    <fullName>LiveText__CreateTask__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreateTask</label>
    <type>Checkbox</type>
</CustomField>