metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Critical_Alert_Time__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Critical_Alert_Time__c</fullName>
    <description>Seconds after conversation tab with no response from LiveMessage Agent turn red.</description>
    <inlineHelpText>The number of seconds before the text session tab alerts the agent to respond</inlineHelpText>
    <label>Critical Alert Time (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>