metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Disconnect_Sound_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Disconnect_Sound_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable to play a sound when an agent is disconnected from the LiveText console.</inlineHelpText>
    <label>Disconnect Sound Enabled</label>
    <type>Checkbox</type>
</CustomField>