metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Formatted_Support_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Formatted_Support_Number__c</fullName>
    <description>Sanitized Support Number</description>
    <formula>LiveText__International_Live_Text_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Support Number</label>
    <type>Text</type>
</CustomField>