metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Initial_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Initial_Message__c</fullName>
    <description>This message is sent automatically to a customer when a text session is started by an agent.</description>
    <inlineHelpText>This message is sent automatically to a customer when a text session is started by an agent.</inlineHelpText>
    <label>Initial Message</label>
    <type>TextArea</type>
</CustomField>