metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__International_Live_Text_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__International_Live_Text_Number__c</fullName>
    <description>International LiveMessage Number</description>
    <label>International LiveMessage Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>