metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__ISOCountryCode__c.field-meta.xml
<CustomField>
    <fullName>LiveText__ISOCountryCode__c</fullName>
    <defaultValue>"US"</defaultValue>
    <description>ISO 3166-1 alpha-2 country code</description>
    <label>ISO Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>