metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__ITR_Enabled__c.field-meta.xml
<CustomField>
    <fullName>LiveText__ITR_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not ITR, and it's associated workflows, is enabled for this number.</description>
    <inlineHelpText>ITR automates opt-out tracking, routing to agent queues(via Omnichannel),case creation,off-hour handling and other interactions.Review the Admin Guide for more info: 
        http://www.heywire.com
        /resources/(Documentation tab)</inlineHelpText>
    <label>ITR Enabled</label>
    <type>Checkbox</type>
</CustomField>