metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__New_Custom_Objects_Tabs__c.field-meta.xml
<CustomField>
    <fullName>LiveText__New_Custom_Objects_Tabs__c</fullName>
    <description>Setting for custom objects feature</description>
    <label>New_Custom_Objects_Tabs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>