metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__New_Objects_Tabs__c.field-meta.xml
<CustomField>
    <fullName>LiveText__New_Objects_Tabs__c</fullName>
    <description>Contains objects for which new tabs will be opened</description>
    <label>New_Objects_Tabs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>