metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__No_Available_Users_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__No_Available_Users_Message__c</fullName>
    <inlineHelpText>This message is sent automatically when an inbound customer text is received while no agents are available. (Not for use with Omni-Channel)</inlineHelpText>
    <label>No Available Users Message</label>
    <type>TextArea</type>
</CustomField>