metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Notify_Users_During_Off_Hours__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Notify_Users_During_Off_Hours__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, new text sessions received during off hours will populate the user's (or agent's) notification queue.</inlineHelpText>
    <label>Notify Users during off hours?</label>
    <type>Checkbox</type>
</CustomField>