metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Number__c</fullName>
    <description>LiveMessage Number</description>
    <inlineHelpText>The phone number that has been verified and enabled for LiveText. To register additional phone numbers please contact LiveText support at http://support.hwlivetext.com</inlineHelpText>
    <label>Support Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>