metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Offline_Hours_Message__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Offline_Hours_Message__c</fullName>
    <description>This message is sent automatically when an inbound customer text is received during offline hours.</description>
    <inlineHelpText>This message is sent automatically when an inbound customer text is received during offline hours.</inlineHelpText>
    <label>Offline Hours Message</label>
    <type>TextArea</type>
</CustomField>