metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Omni_channel_Queue__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Omni_channel_Queue__c</fullName>
    <description>Id of an Omni-channel queue that conversations will be routed to.</description>
    <label>Omni-channel Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>