metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Prepend_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Prepend_Country_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether or not to prepend country code for US and Canadian phone numbers that are auto-populated in new Account, Contact, and Lead records.</inlineHelpText>
    <label>Prepend Country Code</label>
    <type>Checkbox</type>
</CustomField>