metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Save_Session_Attachments__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Save_Session_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Save the attachments that are sent or received during the message session to the session record.</inlineHelpText>
    <label>Save Attachments</label>
    <type>Checkbox</type>
</CustomField>