metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Screen_Pop_Default_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Screen_Pop_Default_Record_Type__c</fullName>
    <description>Default new record type to pop for inbound conversations with no matching records.</description>
    <label>Screen Pop Default Record Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>