metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Search_Exclusively_With_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Search_Exclusively_With_Unique_Id__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, only records previously associated with a Messenger user’s unique ID will be displayed, popped and/or auto-linked. When un-checked records matching a user’s full name will be selected if no records are found using the unique ID.</description>
    <inlineHelpText>When checked, only records previously associated with a Messenger user’s unique ID will be displayed, popped and/or auto-linked. When un-checked records matching a user’s full name will be selected if no records are found using the unique ID.</inlineHelpText>
    <label>Search exclusively with unique ID</label>
    <type>Checkbox</type>
</CustomField>