metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Show_New_Contact_Tab__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Show_New_Contact_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether or not to show the New Contact tab when a text session is started for this phone number.</inlineHelpText>
    <label>Show New Contact</label>
    <type>Checkbox</type>
</CustomField>