metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Start_Message_Form__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Start_Message_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This form is sent automatically when a LiveMessage session is accepted by an agent.</description>
    <inlineHelpText>This form is sent automatically when a LiveMessage session is accepted by an agent.</inlineHelpText>
    <label>Start Message Form</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LiveText__Structured_Form__c.LiveText__Is_Static__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>LiveText__Structured_Form__c.LiveText__Channel__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LiveText__Structured_Form__c</referenceTo>
    <relationshipLabel>LiveText Numbers (Start Message Form)</relationshipLabel>
    <relationshipName>LiveText_Numbers1</relationshipName>
    <type>Lookup</type>
</CustomField>