metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Text_Session_Reuse_Time_seconds__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Text_Session_Reuse_Time_seconds__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The time between when a text session is ended and a new text message is received that an existing text session should be reused.</inlineHelpText>
    <label>LiveMessage Session Reuse Time (seconds)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>