metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/fields/LiveText__Validated__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A number must be verified by HeyWire Business before it is enabled for LiveText. To register additional phone numbers please contact LiveText support at http://support.hwlivetext.com</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>