metadata-sfdx/force-app/main/default/objects/LiveText__LiveText_Number__c/validationRules/LiveText__Chat_End_Message_Length_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>LiveText__Chat_End_Message_Length_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(LiveText__Chat_End_Message__c)>160</errorConditionFormula>
    <errorDisplayField>LiveText__Chat_End_Message__c</errorDisplayField>
    <errorMessage>Chat End Message should not have more than 160 characters.</errorMessage>
</ValidationRule>